# knowledge-hub

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AI_AGENT_PROTECTION_PLAN.md  AI_JAIL_STANDARD.md  DEPRECATED.md  DOC_INDEX.md  GIT_HISTORY_INDEX.md  GLOSSARY.md  MCP_SETUP.md  OWNERSHIP.md  README.md  ROADMAP.md  RULES.md  WORKSPACE_INDEX.md  cloudflare-email-structure.md  index.md  vault-map.md  🏠 Home.md
.claude_code/: README.md
.codex/: AGENT_BRIDGE.md  README.md  SESSION_CLOSE_TEMPLATE.md
.gemini/: README.md
.github/: pull_request_template.md
.obsidian/: community-plugins.json  core-plugins-migration.json  daily-notes.json  graph.json  workspace.json
Backlog/: 00-Backlog.md
Projects/: AwesomePie.md  (+3 more)
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/: .coverage  coverage.json  pyproject.toml
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/config/: icloud.env.example
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/src/application/: use_cases.py
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/src/domain/: entities.py  ports.py
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/src/infrastructure/: audit_logger.py  biometric_auth.py  credential_store.py  imap_adapter.py  keychain_store.py
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/src/presentation/: server.py  setup.py
archive/legacy-repos/ai-orchestration-hub/mcp-imap-server/tests/unit/: test_biometric_auth.py  test_entities.py  test_imap_adapter.py  test_infrastructure.py  test_keychain_auth.py  test_setup.py  test_use_cases.py
(+301 files in other folders)
