[project]
name = "mcp-imap-server"
version = "0.1.0"
description = "MCP server for IMAP email access (iCloud, Gmail, etc.) with LGPD compliance"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jader Philipe Germano"}]
dependencies = [
    "mcp>=1.0.0",
    "imapclient>=3.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
mcp-imap       = "src.presentation.server:main"
mcp-imap-setup = "src.presentation.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["src/presentation/server.py"]  # MCP runtime, tested via integration

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
